--- a/style/menu-bar.css
+++ b/style/menu-bar.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    position: relative;
     width: 232px;
     height: calc(100vh - 96px);
     padding: 66px 0;
